VERIFIED FIXED17532
HTML5 spec violation: Webkit imports styles from <link> element which doesn't have rel=stylesheet defined
https://bugs.webkit.org/show_bug.cgi?id=17532
Summary HTML5 spec violation: Webkit imports styles from <link> element which doesn't...
Robert Blaut
Reported 2008-02-25 04:33:14 PST
HTML5 spec says: "The type of link indicated (the relationship) is given by the value of the rel attribute, which must be present, and must have a value that is a set of space-separated tokens. [...] If the rel attribute is absent, or if the value used is not allowed according to the definitions in this specification, then the element does not define a link." [http://www.whatwg.org/specs/web-apps/current-work/#link] Webkit doesn't honor this regulation and imports styles from such defined links: <link type="text/css" href="style.css" /> This violation causes broken rendering of a one of the top Polish sites fimweb.pl. Test case attached.
Attachments
minimal test case (474 bytes, text/html)
2008-02-25 04:34 PST, Robert Blaut
no flags
test case for all of combination rel="stylesheet" vs. text/css (867 bytes, text/html)
2008-02-25 06:37 PST, Robert Blaut
no flags
proposed patch (4.29 KB, patch)
2008-02-25 15:28 PST, Robert Blaut
hyatt: review-
updated patch (5.78 KB, patch)
2008-02-25 16:32 PST, Robert Blaut
darin: review+
Robert Blaut
Comment 1 2008-02-25 04:34:20 PST
Created attachment 19343 [details] minimal test case
Robert Blaut
Comment 2 2008-02-25 04:36:03 PST
Gecko and Presto engines honor above mentioned regulation.
Robert Blaut
Comment 3 2008-02-25 04:57:11 PST
Robert Blaut
Comment 4 2008-02-25 06:37:30 PST
Created attachment 19347 [details] test case for all of combination rel="stylesheet" vs. text/css
Robert Blaut
Comment 5 2008-02-25 15:28:08 PST
Created attachment 19359 [details] proposed patch This patch matches Webkit behavior to Firefox and Opera. These two existing tests should be updated to match the new re=stylesheet requirements: fast/media/mq-simple-query-02.html fast/media/mq-width-absolute-02.html
Dave Hyatt
Comment 6 2008-02-25 15:32:28 PST
Comment on attachment 19359 [details] proposed patch I need to see how you changed the existing tests. Just want to make sure you are patching them to still load the same set of stylesheets they did before.
Robert Blaut
Comment 7 2008-02-25 15:39:49 PST
(In reply to comment #6) > (From update of attachment 19359 [details] [edit]) > I need to see how you changed the existing tests. Just want to make sure you > are patching them to still load the same set of stylesheets they did before. > Dave, I only informed that these two tests should be updated. The proposed patch only contains the new layout test. These two tests updates are omitted in the patch.
Robert Blaut
Comment 8 2008-02-25 16:32:23 PST
Created attachment 19362 [details] updated patch Updated patch to reflect David's expectations.
Darin Adler
Comment 9 2008-02-29 10:09:07 PST
Comment on attachment 19362 [details] updated patch +</html> \ No newline at end of file New tests should have newlines at the end of the file. r=me
Mark Rowe (bdash)
Comment 10 2008-02-29 14:11:44 PST
Landed in r30673.
Note You need to log in before you can comment on or make changes to this bug.