2008-02-29  Robert Blaut  <webkit@blaut.biz>

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17532
          Webkit imports styles from <link> element which doesn't have rel=stylesheet defined

        Test: fast/html/link-rel-stylesheet.html

        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::process):

2008-02-29  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Darin Adler.

        - Tests for http://bugs.webkit.org/show_bug.cgi?id=17532
          Webkit imports styles from <link> element which doesn't have rel=stylesheet defined

        * fast/html/link-rel-stylesheet.html: Added.
        * fast/media/mq-simple-query-02.html:
        * fast/media/mq-width-absolute-02.html:
        * platform/mac/fast/html/link-rel-stylesheet-expected.txt: Added.


Canonical link: https://commits.webkit.org/24369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30673 268f45cc-cd09-0410-ab3c-d52691b4dbfc